Bug 1139253 - Reuse the original created thread when we enable/disable vsync for SoftwareVsyncSource.